added many sections, etc.

--- a/src/components/MyGithub.astro
+++ b/src/components/MyGithub.astro
@@ -6,7 +6,7 @@
     <div class="grid place-content-center place-self-center mx-auto max-w-[1024px] bg-base-200 rounded-box p-5 md:p-28 shadow-2xl shadow-primary/[0.04]">
         <div class="grid place-self-start place-items-center place-content-center mt-10 md:mt-0 mb-10">
             <div class="grid gap-x-10 grid-flow-col place-content-center place-items-center">
-                <svg class="inline-block w-24 h-24 text-primary" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
+                <svg class="inline-block w-24 h-24 text-success/70" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
                     <mask id="lineMdGithubLoop0" width="24" height="24" x="0" y="0">
                         <g fill="#fff">
                             <ellipse cx="9.5" cy="9" rx="1.5" ry="1" />
@@ -28,16 +28,20 @@
                 </svg>
                 <div class="grid gap-y-5">
                     <h2 class="text-6xl my-auto font-black bg-clip-text text-transparent bg-gradient-to-r from-primary to-secondary">Моя святыня GitHub</h2>
-                    <a class="btn btn-active btn-sm btn-accent place-self-start pt-1" href="https://github.com/vratskyi" target="_blank">Смотреть мой GitHub</a>
+                    <a class="btn btn-active btn-sm btn-primary place-self-start pt-1" href="https://github.com/vratskyi" target="_blank">Смотреть мой GitHub</a>
                 </div>
             </div>
         </div>
         <p class="text-pretty text-3xl antialiased">
           С более чем четырьмя годами опыта в веб-разработке, я как Пегий Дудочник из Силиконовой
           Долины. Мой опыт настолько огромен, что даже баги начинают извиняться и
-          просить прощения за свое существование. Когда я пишу код — мои пальцы танцуют на клавиатуре,
+          просить прощения за свое существование. 
+  
+          Когда я пишу код — мои пальцы танцуют на клавиатуре,
           как профессиональные танцоры на вечеринке.
+        <p class="text-pretty text-xl antialiased italic text-success/70">
+            Почему функции не ходят в театр? Потому что им всегда не хватает аргументов.    
         </p>
-        <blockquote class="text-accent">Серьезно.</blockquote>
+        </p>
     </div>
 </section>
