--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -70,7 +70,7 @@ a {
 }
 
 .bg-grid {
-  background-image: linear-gradient(var(--fallback-s, oklch(var(--s) / 0.04)) 1px, transparent 1px), linear-gradient(to right, var(--fallback-a, oklch(var(--a) / 0.03)) 1px, transparent 1px);
+  background-image: linear-gradient(var(--fallback-s, oklch(var(--s) / 0.04)) 1px, transparent 1px), linear-gradient(to right, var(--fallback-bc, oklch(var(--bc) / 0.03)) 1px, transparent 1px);
   background-size: 40px 40px;
 }
 
