update header badge

--- a/src/components/head/Header.astro
+++ b/src/components/head/Header.astro
@@ -10,8 +10,8 @@ import ShowWeather from '../ShowWeather.astro'
       <!-- кнопка меню -->
       <div class="grid grid-flow-col gap-x-5">
         <MenuButton transition:persist />
-        <div class="not-prose place-self-center text-xs md:text-sm badge badge-primary badge-outline pt-3 pb-2 ">
-          <h2 class="bg-clip-text text-transparent bg-gradient-to-r from-primary via-secondary to-accent glow-gradient-text text-gradient-shadow">
+        <div class="not-prose place-self-center text-xs md:text-sm badge badge-secondary pt-3 pb-2 ">
+          <h2 class="text-neural">
             свободен
           </h2>
         </div>
