--- a/src/components/CTA.astro
+++ b/src/components/CTA.astro
@@ -22,7 +22,7 @@ const t = useTranslations(lang);
 
   <div class="grid place-content-center place-items-ceter place-self-center mx-auto w-full max-w-xl text-center lg:mx-0 lg:py-32">
     <h2 class="text-3xl font-bold tracking-tight sm:text-4xl">Мой код. Мои правила. Мои баги.</h2>
-    <p class="mt-6 text-lg leading-8">Как программисты говорят друг другу <code>пока ?</code> <code> return 0;</code></p>
+    <p class="mt-6 text-lg leading-8">Как программисты говорят друг другу пока ? <code> return 0;</code></p>
 
 
     <div class="mt-10 grid grid-flow-col place-items-center place-content-center gap-x-10">
