--- a/src/components/CTA.astro
+++ b/src/components/CTA.astro
@@ -25,9 +25,9 @@ const t = useTranslations(lang);
     <p class="mt-6 text-lg leading-8">Как программисты говорят друг другу пока ? <code> return 0;</code></p>
 
 
-    <div class="mt-10 grid grid-flow-col place-items-center place-content-center gap-x-10">
+    <div class="mb-10 md:mb-0 mt-10 grid grid-flow-col place-items-center place-content-center gap-x-10">
       <OrderButton />
-      <a href="#" class="inline-block text-sm font-semibold leading-6">{t('nav.portfolio')}<span aria-hidden="true">→</span></a>
+      <a href="#" class="inline-block text-sm font-semibold leading-6 hover:text-primary duration-150">{t('nav.portfolio')}<span aria-hidden="true">→</span></a>
     </div>
 
   </div>
