mobile version bug fix

--- a/src/components/MyGithub.astro
+++ b/src/components/MyGithub.astro
@@ -1,9 +1,9 @@
-<section class="grid mx-auto min-w-full h-full max-h-svh relative">
+<section class="grid mx-auto lg:min-w-full lg:h-full lg:max-h-svh relative">
     <div class="absolute top-0 left-0 right-0 bottom-0 bg-grid z-[-1]"></div>
     
 
     
-    <div class="grid place-content-center place-self-center mx-auto max-w-[1024px] bg-base-200 rounded-box p-5 md:p-28 shadow-2xl shadow-primary/[0.04]">
+    <div class="grid place-content-center place-self-center mx-auto max-w-[1024px] bg-base-200 rounded-box p-2 md:p-28 shadow-2xl shadow-primary/[0.04]">
         <div class="grid place-self-start place-items-center place-content-center mt-10 md:mt-0 mb-10">
             <div class="grid gap-x-10 grid-flow-col place-content-center place-items-center">
                 <svg class="inline-block w-24 h-24 text-success/70" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
