--- a/src/components/head/Header.astro
+++ b/src/components/head/Header.astro
@@ -10,7 +10,7 @@ import ShowWeather from '../ShowWeather.astro'
       <!-- кнопка меню -->
       <div class="grid grid-flow-col gap-x-5">
         <MenuButton transition:persist />
-        <div class="not-prose place-self-center text-xs md:text-sm badge badge-secondary pt-3 pb-2 ">
+        <div class="not-prose place-self-center text-xs md:text-sm badge badge-success pt-3 pb-2 ">
           <h2 class="text-neural">
             свободен
           </h2>
