--- a/src/components/CTA.astro
+++ b/src/components/CTA.astro
@@ -21,8 +21,10 @@ const t = useTranslations(lang);
   </svg>
 
   <div class="grid place-content-center place-items-ceter place-self-center mx-auto w-full max-w-xl text-center lg:mx-0 lg:py-32">
-    <h2 class="text-3xl font-bold tracking-tight sm:text-4xl">Мой код. Мои правила. Мои баги.</h2>
-    <p class="mt-6 text-lg leading-8">Как программисты говорят друг другу пока ? <code> return 0;</code></p>
+    <div>
+      <h2 class="text-3xl font-bold tracking-tight sm:text-4xl">Мой код. Мои правила. Мои баги.</h2>
+      <p class="mt-6 text-lg leading-8">Как программисты говорят друг другу пока ? <code> return 0;</code></p>
+    </div>
 
 
     <div class="mb-10 md:mb-0 mt-10 grid grid-flow-col place-items-center place-content-center gap-x-10">
