update to astro 4.5

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -24,7 +24,7 @@ const t = useTranslations(lang);
     </aside>
   </footer>
 
-  <script>
+  <script data-astro-rerun is:inline>
     document.addEventListener('astro:page-load', () => {
       // Получение текущей даты
       let currentDate = new Date();
