--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -24,4 +24,4 @@
     </a>   
 </div>
 
-<script src="/scripts/dynamicAdapt.js" defer transition:persist></script>
+<script src="/scripts/dynamicAdapt.js" defer transition:persist data-astro-rerun></script>
