--- a/src/components/head/ThemeSwitcher.astro
+++ b/src/components/head/ThemeSwitcher.astro
@@ -6,7 +6,7 @@
     </label>
 </div>
 
-<script type="text/javascript" transition:persist>
+<script type="text/javascript" transition:persist data-astro-rerun is:inline>
 document.addEventListener('astro:page-load', () => {
   // Переключатель тем
   const themeSwitcher = document.querySelector('.switch-theme input[type="checkbox"]');
