--- a/src/components/ShowWeather.astro
+++ b/src/components/ShowWeather.astro
@@ -9,7 +9,7 @@ const t = useTranslations(lang);
   {t("nav.city")} 🕐<span id="weather"></span>
 </div>
 
-<script type="text/javascript" transition:persist>
+<script type="text/javascript" transition:persist data-astro-rerun is:inline>
   document.addEventListener("astro:page-load", () => {
     const api =
       "http://api.weatherapi.com/v1/current.json?key=f93e372191eb42b981702543240903&q=Kyiv&aqi=no";
