--- a/src/components/CTA.astro
+++ b/src/components/CTA.astro
@@ -29,7 +29,7 @@ const t = useTranslations(lang);
 
     <div class="mb-10 md:mb-0 mt-10 grid grid-flow-col place-items-center place-content-center gap-x-10">
       <OrderButton />
-      <a href="#" class="inline-block text-sm font-semibold leading-6 hover:text-primary duration-150">{t('nav.portfolio')}<span aria-hidden="true">→</span></a>
+      <a href={`/${lang}/portfolio`} class="inline-block text-sm font-semibold leading-6 hover:text-primary duration-150">{t('nav.portfolio')}<span aria-hidden="true">→</span></a>
     </div>
 
   </div>
