--- a/src/components/head/Header.astro
+++ b/src/components/head/Header.astro
@@ -8,28 +8,29 @@ import { getLangFromUrl, useTranslations } from '../../i18n/utils';
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
-
-<div class="navbar bg-base-200 rounded-box px-5 fixed top-0 left-0 right-0 w-full max-w-[1024px] mx-auto z-50">
-    <div class="navbar-start">
-      <!-- кнопка меню -->
-      <div class="grid grid-flow-col gap-x-5">
-        <MenuButton transition:persist />
-        <div class="not-prose place-self-center text-xs md:text-sm badge badge-success pt-3 pb-2 ">
-          <h2 class="text-neural">
-            {t('nav.hireable')}
-          </h2>
+<header class="fixed top-0 left-0 right-0 mx-auto w-full max-w-full bg-base-200/60 z-10 backdrop-blur-3xl">
+  <div class="navbar px-5 w-full max-w-[1024px] mx-auto z-50">
+      <div class="navbar-start">
+        <!-- кнопка меню -->
+        <div class="grid grid-flow-col gap-x-5">
+          <MenuButton transition:persist />
+          <div class="not-prose place-self-center text-xs md:text-sm badge badge-success pt-3 pb-2 ">
+            <h2 class="text-neural">
+              {t('nav.hireable')}
+            </h2>
+          </div>
         </div>
       </div>
+      <!-- логотип -->
+      <Logo transition:persist />
+      <div class="navbar-end flex space-x-6">
+      <div class="flex space-x-2">
+      </div>
+      <div data-da=".socials,648,first" transition:persist>
+        <ShowWeather transition:persist />
+      </div>
+        <!-- заказать -->
+        <OrderButton transition:persist />
+      </div>
     </div>
-    <!-- логотип -->
-    <Logo transition:persist />
-    <div class="navbar-end flex space-x-6">
-    <div class="flex space-x-2">
-    </div>
-    <div data-da=".socials,648,first" transition:persist>
-      <ShowWeather transition:persist />
-    </div>
-      <!-- заказать -->
-      <OrderButton transition:persist />
-    </div>
-  </div>
+</header>
