--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,11 +7,11 @@ const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
-<footer class="footer footer-center py-20 px-10 bg-base-200 text-base-content rounded">
+<footer class="footer footer-center py-20 px-10 bg-base-200 mt-auto text-base-content rounded z-20">
     <nav class="grid grid-flow-col gap-4">
-      <a href="#" class="link link-hover hover:text-primary duration-150">{t('nav.home')}</a>
-      <a href="#" class="link link-hover hover:text-primary duration-150">{t('nav.portfolio')}</a>
-      <a href="#" class="link link-hover hover:text-primary duration-150">{t('nav.services')}</a>
+      <a href={`/${lang}/`} class="link link-hover hover:text-primary duration-150">{t('nav.home')}</a>
+      <a href={`/${lang}/portfolio`} class="link link-hover hover:text-primary duration-150">{t('nav.portfolio')}</a>
+      <a href={`/${lang}/services`} class="link link-hover hover:text-primary duration-150">{t('nav.services')}</a>
     </nav> 
     <nav>
       <div class="grid grid-flow-col gap-4">
