--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "../components/Footer.astro";
 import Head from "../components/head/Head.astro";
 import Header from "../components/head/Header.astro";
 import { getLangFromUrl } from '../i18n/utils';
@@ -11,9 +12,8 @@ const { title = 'VRATSKYI' } = Astro.props;
 <html lang={lang} data-theme="dracula">
   <Head title={title} />
   <body class="mx-auto min-w-full cursor-default prose subpixel-antialiased"> 
-    <div class="mx-auto w-full max-w-[1024px]">
-      <Header transition:persist />
-    </div>
+        <Header transition:persist />
     <slot />
-  </body>
+      <Footer transition:persist>
+    </body>
 </html>
