--- a/src/components/MyGithub.astro
+++ b/src/components/MyGithub.astro
@@ -5,12 +5,18 @@ const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
-<section class="grid mx-auto lg:min-w-full lg:h-full lg:max-h-svh relative">
+<section class="grid mx-auto lg:min-w-full lg:h-full lg:max-h-svh relative overflow-hidden">
     <div class="absolute top-0 left-0 right-0 bottom-0 bg-grid z-[-1]"></div>
+    <div class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl" aria-hidden="true">
+        <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-20" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+      </div>
+      <div class="absolute -top-52 left-1/2 -z-10 -translate-x-1/2 transform-gpu blur-3xl sm:top-[-28rem] sm:ml-16 sm:translate-x-0 sm:transform-gpu" aria-hidden="true">
+        <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-20" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+      </div>
     
 
     
-    <div class="grid place-content-center place-self-center mx-auto max-w-[1024px] bg-base-200 rounded-box p-2 md:p-28 shadow-2xl shadow-primary/[0.04]">
+    <div class="grid place-content-center place-self-center mx-auto max-w-[1024px] bg-base-200/20 z-30 rounded-box backdrop-blur-3xl p-2 md:p-28 shadow-2xl shadow-primary/[0.04]">
         <div class="grid place-self-start place-items-center place-content-center mt-10 md:mt-0 mb-10">
             <div class="grid gap-x-10 grid-flow-col place-content-center place-items-center">
                 <svg class="inline-block w-24 h-24 text-success/70" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
