--- a/src/components/head/Header.astro
+++ b/src/components/head/Header.astro
@@ -8,7 +8,7 @@ import { getLangFromUrl, useTranslations } from '../../i18n/utils';
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
-<header class="fixed top-0 left-0 right-0 mx-auto w-full max-w-full bg-base-200/60 z-50 backdrop-blur-3xl">
+<header class="fixed top-0 left-0 right-0 mx-auto w-full max-w-full bg-base-200/60 z-50 backdrop-blur-3xl border-b-2 border-secondary/[0.08]">
   <div class="navbar px-5 w-full max-w-[1024px] mx-auto z-50">
       <div class="navbar-start">
         <!-- кнопка меню -->
