--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,7 @@ const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
-<footer class="footer footer-center py-20 px-10 bg-base-200 mt-auto text-base-content rounded z-20">
+<footer class="footer footer-center py-20 px-10 bg-base-200/20 backdrop-blur-3xl mt-auto text-base-content rounded z-20">
     <nav class="grid grid-flow-col gap-4">
       <a href={`/${lang}/`} class="link link-hover hover:text-primary duration-150">{t('nav.home')}</a>
       <a href={`/${lang}/portfolio`} class="link link-hover hover:text-primary duration-150">{t('nav.portfolio')}</a>
