--- a/src/components/MyGithub.astro
+++ b/src/components/MyGithub.astro
@@ -19,7 +19,7 @@ const t = useTranslations(lang);
     <div class="grid place-content-center place-self-center mx-auto max-w-[1024px] bg-base-200/20 z-30 rounded-box backdrop-blur-3xl p-2 md:p-28 shadow-2xl shadow-primary/[0.04]">
         <div class="grid place-self-start place-items-center place-content-center mt-10 md:mt-0 mb-10">
             <div class="grid gap-x-10 grid-flow-col place-content-center place-items-center">
-                <svg class="inline-block w-24 h-24 text-success/70" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
+                <svg class="inline-block w-24 h-24 text-primary" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
                     <mask id="lineMdGithubLoop0" width="24" height="24" x="0" y="0">
                         <g fill="#fff">
                             <ellipse cx="9.5" cy="9" rx="1.5" ry="1" />
@@ -40,15 +40,19 @@ const t = useTranslations(lang);
                     </rect>
                 </svg>
                 <div class="grid gap-y-5">
-                    <h2 class="text-6xl my-auto font-black bg-clip-text text-transparent bg-gradient-to-r from-primary to-secondary">{t('mygithub.title')}</h2>
-                    <a class="btn btn-active btn-sm btn-primary place-self-start pt-1" href="https://github.com/vratskyi" target="_blank">{t('mygithub.button')}</a>
+                    <h2 class="text-6xl my-auto font-black">
+                        {t('mygithub.title')}
+                    </h2>
+                    <a class="btn btn-active btn-sm btn-primary place-self-start pt-1" href="https://github.com/vratskyi" target="_blank">
+                        {t('mygithub.button')}
+                    </a>
                 </div>
             </div>
         </div>
         <p class="text-pretty text-3xl antialiased">
             {t('mygithub.description')}
         </p>
-        <p class="text-pretty text-xl antialiased italic text-success/70">
+        <p class="text-pretty text-xl antialiased italic text-primary">
             {t('mygithub.joke')}    
         </p>
     </div>
