--- a/src/components/MyGithub.astro
+++ b/src/components/MyGithub.astro
@@ -16,7 +16,7 @@ const t = useTranslations(lang);
     
 
     
-    <div class="grid place-content-center place-self-center mx-auto max-w-[1024px] bg-base-200/20 z-30 rounded-box backdrop-blur-3xl p-2 md:p-28 shadow-2xl shadow-primary/[0.04]">
+    <div class="grid place-content-center place-self-center mx-auto max-w-[1024px] bg-base-200/20 backdrop-blur-3xl shadow-2xl shadow-primary/[0.04] rounded-box z-30 p-2 md:p-28">
         <div class="grid place-self-start place-items-center place-content-center mt-10 md:mt-0 mb-10">
             <div class="grid gap-x-10 grid-flow-col place-content-center place-items-center">
                 <svg class="inline-block w-24 h-24 text-primary" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
