--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -31,7 +31,7 @@ const t = useTranslations(lang);
             <dt class="text-base">Tailwind CSS</dt>
           </div>
           <div class="bg-base-100 rounded-box p-5 w-full md:w-60 grid place-content-center place-items-center place-self-stretch gap-y-5">
-            <dd class="text-2xl font-bold text-primary">
+            <dd class="text-2xl font-light text-primary">
               daisyUI
             </dd>
           </div>
